Feedback aus PCÜ added
TODO: Geburtstage vergleichen in getKundengeburtstage()